# nickel

./: Cargo.toml
core/: Cargo.toml
core/src/: program.rs  serialize.rs
core/src/error/: report.rs
core/src/repl/: rustyline_frontend.rs
mi/: Cargo.toml
mi/src/: main.rs
