[package]
name = "mi"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
clappy = ["nickel-lang-core/clappy"]

[dependencies]
nickel-lang-core.workspace = true

