[package]
name = "mi"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
clap = ["nickel-lang-core/clap"]

[dependencies]
nickel-lang-core.workspace = true

